--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        color: white;
       }
       .attribution a {
         color: hsl(228, 45%, 64%);
